[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/settings/section_selector.gd" type="Script" id=1]
[ext_resource path="res://assets/materials/menu_tab.material" type="Material" id=2]
[ext_resource path="res://assets/fonts/subtext.tres" type="DynamicFont" id=3]

[node name="SectionSelector" type="Button"]
rect_min_size = Vector2( 300, 100 )
custom_colors/font_color = Color( 0.560784, 0.560784, 0.560784, 1 )
custom_fonts/font = ExtResource( 3 )
toggle_mode = true
text = "Section"
flat = true
script = ExtResource( 1 )

[node name="BG" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
material = ExtResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color( 0, 0, 0, 0 )

[node name="Bar" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_top = 0.95
anchor_right = 1.0
anchor_bottom = 1.0

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="toggled" from="." to="." method="_on_toggled"]
